--- a/README.Rmd
+++ b/README.Rmd
@@ -1,21 +1,28 @@
-Advent of Code 2020
-================
-Hamed Bastan-Hagh
-01/12/2020
+---
+title: "Advent of Code 2020"
+author: "Hamed Bastan-Hagh"
+date: "01/12/2020"
+output: 
+    github_document: 
+        toc: true
+        toc_depth: 1
+---
 
--   [Day 1](#day-1)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+walk(list.files(here::here("R"), full.names = TRUE), source)
+```
 
-Here’s the work on Advent of Code 2020. Let’s see if I do more than my
-usual thing of getting halfway and then not finding time for the rest!
+Here's the work on Advent of Code 2020. Let's see if I do more than my usual thing of getting halfway and then not finding time for the rest!
 
 # Day 1
 
 ## Part 1
 
-First we need the product of the two numbers in the expense report that
-add to 2020.
+First we need the product of the two numbers in the expense report that add to 2020. 
 
-``` r
+```{r day01-part1}
 day01_expense_report <- readLines(here::here("data/day01.txt")) %>% 
     as.double()
 
@@ -41,13 +48,11 @@ day01_expense_report %>%
     }
 ```
 
-    ## [1] "Part 1 answer is 889779"
-
 ## Part 2
 
-Now do the same but for the **three** numbers that add to 2020.
+Now do the same but for the **three** numbers that add to 2020. 
 
-``` r
+```{r day01-part2}
 day01_expense_report %>% 
     {
         expand_grid(
@@ -71,5 +76,3 @@ day01_expense_report %>%
         sprintf("Part 2 answer is %s", .)
     }
 ```
-
-    ## [1] "Part 2 answer is 76110336"
