--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ library(tidyverse)
 walk(list.files(here::here("R"), full.names = TRUE), source)
 ```
 
-Here's the work on Advent of Code 2020. Let's see if I do more than my usual thing of getting halfway and then not finding time for the rest!
+Here's my work on Advent of Code 2020. Let's see if I do more than my usual thing of getting halfway and then not finding time for the rest!
 
 # Day 1
 
@@ -40,7 +40,7 @@ day01_expense_report %>%
     ) %>% 
     pivot_longer(cols = everything()) %>% 
     pull(value) %>% 
-    reduce(`*`) %>% 
+    prod() %>% 
     {
         sprintf("Part 1 answer is %s", .)
     }
@@ -144,23 +144,8 @@ day03_map <- day03_input %>%
 
 
 ```{r count_trees}
-count_trees <- function(map_matrix, step_down, step_right) {
-    
-    # Easier to get the indices we will need separately
-    rows <- seq(1, nrow(map_matrix), by = step_down)
-    columns <- 
-        seq(1, by = step_right, length.out = length(rows)) %% ncol(map_matrix)
-    # Replacing the zeroes is maybe a bit hacky but this is the price we pay for
-    # indexing from 1 and being unwilling to spend time on figuring out a more
-    # elegant solution with modular arithmetic
-    columns[columns == 0L] <- ncol(day03_map)
-    
-    map2_chr(rows, columns, ~ map_matrix[.x, .y]) %>% 
-        str_c(collapse = "") %>% 
-        str_count("#")
-}
+count_trees
 ```
-
 
 ```{r day03-part1}
 sprintf("Part 1 answer is %s trees", count_trees(day03_map, 1, 3))
