--- a/README.Rmd
+++ b/README.Rmd
@@ -233,3 +233,43 @@ day04_valid %>%
         sprintf("Part 2 answer is %s", .)
     }
 ```
+
+# Day 5
+
+## Part 1
+
+The problem uses binary partitioning to find a seat on the plane. The row numbers get higher as they go from the `F`ront to the `B`ack; column numbers start low on the `L`eft and are higher on the `R`ight. 
+
+Can do this by converting to binary. 
+
+```{r parse_seat_spec}
+parse_seat_spec
+```
+
+Now point this at today's input. 
+
+```{r day05-part1}
+day05_specs <- tibble(seat_spec = read_lines(here::here("data/day05.txt")))
+
+day05_seats <- day05_specs %>% 
+    mutate(combined = map(seat_spec, parse_seat_spec)) %>% 
+    unnest_wider(combined) %>% 
+    mutate(seat_id = map2_int(row, col, ~ (8L * .x) + .y))
+
+sprintf("Part 1 answer: highest seat number is %s", max(day05_seats$seat_id))
+```
+
+## Part 2
+
+Need to find my seat, which is the only one missing. I know that mine won't be the lowest or highest seat ID.
+
+```{r day05-part2}
+(seq(0, 127) * 8L) %>% 
+    map(~ .x + seq(7)) %>% 
+    unlist() %>% 
+    setdiff(day05_seats$seat_id) %>% 
+    keep(~ between(.x, min(day05_seats$seat_id), max(day05_seats$seat_id))) %>% 
+    {
+        sprintf("Part 2 answer: my seat id is %s", .)
+    }
+```
