tighten up day 5, part 2 answer

--- a/README.Rmd
+++ b/README.Rmd
@@ -264,11 +264,8 @@ sprintf("Part 1 answer: highest seat number is %s", max(day05_seats$seat_id))
 Need to find my seat, which is the only one missing. I know that mine won't be the lowest or highest seat ID.
 
 ```{r day05-part2}
-(seq(0, 127) * 8L) %>% 
-    map(~ .x + seq(7)) %>% 
-    unlist() %>% 
+seq(min(day05_seats$seat_id), max(day05_seats$seat_id)) %>% 
     setdiff(day05_seats$seat_id) %>% 
-    keep(~ between(.x, min(day05_seats$seat_id), max(day05_seats$seat_id))) %>% 
     {
         sprintf("Part 2 answer: my seat id is %s", .)
     }
