--- a/README.Rmd
+++ b/README.Rmd
@@ -256,7 +256,7 @@ day05_seats <- day05_specs %>%
     unnest_wider(combined) %>% 
     mutate(seat_id = map2_int(row, col, ~ (8L * .x) + .y))
 
-sprintf("Part 1 answer: highest seat number is %s", max(day05_seats$seat_id))
+sprintf("Part 1 answer: highest seat ID is %s", max(day05_seats$seat_id))
 ```
 
 ## Part 2
