--- a/README.Rmd
+++ b/README.Rmd
@@ -270,3 +270,40 @@ seq(min(day05_seats$seat_id), max(day05_seats$seat_id)) %>%
         sprintf("Part 2 answer: my seat id is %s", .)
     }
 ```
+
+# Day 6
+
+## Part 1
+
+Need counts for how many distinct questions were answered yes by anyone in each group. Or: the union of all the sets of answers. 
+
+```{r day06-part1}
+day06_answers <- tibble(x = read_lines(here::here("data/day06.txt"))) %>% 
+    mutate(group_id = cumsum(x == "")) %>% 
+    filter(x != "") %>% 
+    add_count(group_id, name = "group_size") %>% 
+    mutate(split_x = str_split(x, ""))
+
+day06_answers %>% 
+    group_by(group_id) %>% 
+    summarise(all_yes = reduce(split_x, union), .groups = "drop") %>% 
+    nrow() %>% 
+    {
+        sprintf("Part 1 answer is %s", .)
+    }
+```
+
+## Part 2
+
+Now need counts for how many questions were answered yes by _everyone_ in each group. Just replace `union()` with `intersect()`. 
+
+```{r}
+day06_answers %>% 
+    mutate(split_x = str_split(x, "")) %>% 
+    group_by(group_id) %>% 
+    summarise(all_yes = reduce(split_x, intersect), .groups = "drop") %>% 
+    nrow() %>% 
+    {
+        sprintf("Part 2 answer is %s", .)
+    }
+```
