--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(igraph)
 walk(list.files(here::here("R"), full.names = TRUE), source)
 ```
 
@@ -20,11 +21,11 @@ Here's my work on Advent of Code 2020. Let's see if I do more than my usual thin
 
 First we need the product of the two numbers in the expense report that add to 2020. 
 
-```{r day01-part1}
-day01_expense_report <- readLines(here::here("data/day01.txt")) %>% 
+```{r day1-part1}
+day1_expense_report <- readLines(here::here("data/day1.txt")) %>% 
     as.double()
 
-day01_expense_report %>% 
+day1_expense_report %>% 
     {
         expand_grid(
             num1 = ., 
@@ -50,8 +51,8 @@ day01_expense_report %>%
 
 Now do the same but for the **three** numbers that add to 2020. 
 
-```{r day01-part2}
-day01_expense_report %>% 
+```{r day1-part2}
+day1_expense_report %>% 
     {
         expand_grid(
             num1 = ., 
@@ -85,9 +86,9 @@ Count how many of the passwords are valid. Created a function to compare a passw
 test_password
 ```
 
-```{r day02-part1}
-day02_passwords <- read_delim(
-    here::here("data/day02.txt"), 
+```{r day2-part1}
+day2_passwords <- read_delim(
+    here::here("data/day2.txt"), 
     delim = " ", 
     col_names = c("policy", "letter", "password"), 
     col_types = "ccc"
@@ -96,7 +97,7 @@ day02_passwords <- read_delim(
     mutate(
         letter = str_remove(letter, ":")
     )
-day02_passwords %>% 
+day2_passwords %>% 
     mutate(valid = pmap_lgl(., test_password)) %>% 
     filter(valid) %>% 
     {
@@ -112,8 +113,8 @@ Now we need a different version of the password testing function that will compl
 test_password_OTCP
 ```
 
-```{r day02-part2}
-day02_passwords %>% 
+```{r day2-part2}
+day2_passwords %>% 
     mutate(valid = pmap_lgl(., test_password_OTCP)) %>% 
     filter(valid) %>% 
     {
@@ -127,19 +128,19 @@ day02_passwords %>%
 
 Need to navigate the map and count the number of trees we hit travelling **down 1, across 3** at every step. The same map repeats infinitely to the right. 
 
-```{r day03-data}
+```{r day3-data}
 # Save the 'raw' input: partly because its dimensions will be useful when
 # creating the map, partly because I'm bound to need it again for Part 2
-day03_input <- readLines(here::here("data/day03.txt"))
+day3_input <- readLines(here::here("data/day3.txt"))
 
-day03_map <- day03_input %>% 
+day3_map <- day3_input %>% 
     map(
         ~ .x %>% 
             str_split("") %>% 
             pluck(1)
     ) %>% 
     unlist() %>% 
-    matrix(nrow = length(day03_input), byrow = TRUE)
+    matrix(nrow = length(day3_input), byrow = TRUE)
 ```
 
 
@@ -147,22 +148,22 @@ day03_map <- day03_input %>%
 count_trees
 ```
 
-```{r day03-part1}
-sprintf("Part 1 answer is %s trees", count_trees(day03_map, 1, 3))
+```{r day3-part1}
+sprintf("Part 1 answer is %s trees", count_trees(day3_map, 1, 3))
 ```
 
 ## Part 2
 
 Now need to check a number of trajectories and then return the product of the result. 
 
-```{r day03-part2}
+```{r day3-part2}
 down <-  c(1, 1, 1, 1, 2)
 right <- c(1, 3, 5, 7, 1)
 
 map2_int(
     down, 
     right, 
-    ~ count_trees(day03_map, .x, .y)
+    ~ count_trees(day3_map, .x, .y)
 ) %>% 
     prod() %>% 
     {
@@ -175,12 +176,12 @@ map2_int(
 
 Data validation. This is a bit of a busman's holiday but off we go. 
 
-```{r day04-setup}
+```{r day4-setup}
 # get the required fields
 req <- c("byr", "iyr", "eyr", "hgt", "hcl", "ecl", "pid")
-day04_input <- tibble(x = read_lines(here::here("data/day04.txt")))
+day4_input <- tibble(x = read_lines(here::here("data/day4.txt")))
 
-day04_passports <- day04_input %>% 
+day4_passports <- day4_input %>% 
     mutate(id = cumsum(x == "")) %>% 
     mutate(pairs = str_match_all(x, "(...)\\:([^ ]+)")) %>% 
     mutate(
@@ -193,21 +194,21 @@ day04_passports <- day04_input %>%
 
 Now we have the passports cleaned up it's just grouping and counting. 
 
-```{r day04-part1}
-day04_valid <- day04_passports %>% 
+```{r day4-part1}
+day4_valid <- day4_passports %>% 
     group_by(id) %>% 
     filter(all(req %in% c(key)))
 
 sprintf("Part 1 answer is %s valid passports", 
-        length(unique(day04_valid$id)))
+        length(unique(day4_valid$id)))
 ```
 
 ## Part 2
 
 Now need to validate the values. 
 
-```{r day04-part2}
-day04_valid %>% 
+```{r day4-part2}
+day4_valid %>% 
     # make sure we don't have any stray spaces messing things up in the value 
     # field
     mutate(across(where(is.character), str_trim)) %>% 
@@ -248,24 +249,24 @@ parse_seat_spec
 
 Now point this at today's input. 
 
-```{r day05-part1}
-day05_specs <- tibble(seat_spec = read_lines(here::here("data/day05.txt")))
+```{r day5-part1}
+day5_specs <- tibble(seat_spec = read_lines(here::here("data/day5.txt")))
 
-day05_seats <- day05_specs %>% 
+day5_seats <- day5_specs %>% 
     mutate(combined = map(seat_spec, parse_seat_spec)) %>% 
     unnest_wider(combined) %>% 
     mutate(seat_id = map2_int(row, col, ~ (8L * .x) + .y))
 
-sprintf("Part 1 answer: highest seat ID is %s", max(day05_seats$seat_id))
+sprintf("Part 1 answer: highest seat ID is %s", max(day5_seats$seat_id))
 ```
 
 ## Part 2
 
 Need to find my seat, which is the only one missing. I know that mine won't be the lowest or highest seat ID.
 
-```{r day05-part2}
-seq(min(day05_seats$seat_id), max(day05_seats$seat_id)) %>% 
-    setdiff(day05_seats$seat_id) %>% 
+```{r day5-part2}
+seq(min(day5_seats$seat_id), max(day5_seats$seat_id)) %>% 
+    setdiff(day5_seats$seat_id) %>% 
     {
         sprintf("Part 2 answer: my seat id is %s", .)
     }
@@ -277,14 +278,14 @@ seq(min(day05_seats$seat_id), max(day05_seats$seat_id)) %>%
 
 Need counts for how many distinct questions were answered yes by anyone in each group. Or: the union of all the sets of answers. 
 
-```{r day06-part1}
-day06_answers <- tibble(x = read_lines(here::here("data/day06.txt"))) %>% 
+```{r day6-part1}
+day6_answers <- tibble(x = read_lines(here::here("data/day6.txt"))) %>% 
     mutate(group_id = cumsum(x == "")) %>% 
     filter(x != "") %>% 
     add_count(group_id, name = "group_size") %>% 
     mutate(split_x = str_split(x, ""))
 
-day06_answers %>% 
+day6_answers %>% 
     group_by(group_id) %>% 
     summarise(all_yes = reduce(split_x, union), .groups = "drop") %>% 
     nrow() %>% 
@@ -298,11 +299,64 @@ day06_answers %>%
 Now need counts for how many questions were answered yes by _everyone_ in each group. Just replace `union()` with `intersect()`. 
 
 ```{r}
-day06_answers %>% 
+day6_answers %>% 
     group_by(group_id) %>% 
     summarise(all_yes = reduce(split_x, intersect), .groups = "drop") %>% 
     nrow() %>% 
     {
         sprintf("Part 2 answer is %s", .)
     }
+```
+
+# Day 7
+
+## Part 1
+
+```{r day7-part1}
+day7_input <- read_lines(here::here("data/day7.txt"))
+day7_tidy <- tibble(x = day7_input) %>%
+    separate(x, into = c("outside", "inside"), sep = " contain ") %>% 
+    separate_rows(inside, sep = ", ") %>% 
+    filter(!(str_detect(inside, "no other bag"))) %>% 
+    mutate(inside_bag_count = parse_number(inside)) %>% 
+    mutate(
+        outside = str_match(outside, "([a-z]+ [a-z]+) bag")[, 2], 
+        inside  = str_match(inside, "^\\d+ ([a-z]+ [a-z]+) bag")[, 2]
+    )
+
+day7_tidy %>% 
+    select(from = inside, to = outside) %>% 
+    graph_from_data_frame() %>% 
+    all_simple_paths(
+        from = "shiny gold", 
+        mode = "out"
+    ) %>% 
+    map(~ attr(.x, "names") %>% str_subset("shiny gold", negate = TRUE)) %>% 
+    unlist() %>% 
+    unique() %>% 
+    length() %>% 
+    {
+        sprintf("There are %s possible containers", .)
+    }
+```
+
+## Part 2
+
+Now we need to count the total number of bags that the `shiny gold` must contain. Use some recursion for this. Took me a while to get it right, forgot to add the 1 at the end. 
+
+```{r day7-part2}
+count_bags <- function(bag_desc) {
+    d <- day7_tidy %>% 
+        filter(outside == bag_desc)
+    
+    sum(
+        d$inside_bag_count * 
+            (map_dbl(d$inside, count_bags) + 1)
+    )
+}
+
+sprintf(
+    "Part 2 answer: the shiny gold bag must contain %s other bags", 
+    count_bags("shiny gold")
+)
 ```
