update day 7 part 2 to use graphs

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(igraph)
+library(tidygraph)
 walk(list.files(here::here("R"), full.names = TRUE), source)
 ```
 
@@ -312,26 +313,42 @@ day6_answers %>%
 
 ## Part 1
 
+This sort of problem lends itself to some sort of graph structure. Time to learn a bit about {igraph}. 
+
 ```{r day7-part1}
 day7_input <- read_lines(here::here("data/day7.txt"))
-day7_tidy <- tibble(x = day7_input) %>%
-    separate(x, into = c("outside", "inside"), sep = " contain ") %>% 
-    separate_rows(inside, sep = ", ") %>% 
-    filter(!(str_detect(inside, "no other bag"))) %>% 
-    mutate(inside_bag_count = parse_number(inside)) %>% 
-    mutate(
-        outside = str_match(outside, "([a-z]+ [a-z]+) bag")[, 2], 
-        inside  = str_match(inside, "^\\d+ ([a-z]+ [a-z]+) bag")[, 2]
-    )
 
-day7_tidy %>% 
-    select(from = inside, to = outside) %>% 
-    graph_from_data_frame() %>% 
-    all_simple_paths(
-        from = "shiny gold", 
-        mode = "out"
-    ) %>% 
-    map(~ attr(.x, "names") %>% str_subset("shiny gold", negate = TRUE)) %>% 
+day7_tidy <- tibble(x = day7_input) %>%
+    separate(x, into = c("outside", "inside"), sep = " bags contain ") %>%
+    separate_rows(inside, sep = ", ") %>%
+    mutate(inside = str_remove(inside, " bags?.?")) %>%
+    separate(inside, into = c("weight", "inside"), extra = "merge") %>%
+    mutate(weight = str_replace(weight, "no", "0") %>% parse_number())
+
+day7_nodes <- tibble(desc = union(day7_tidy$outside, day7_tidy$inside)) %>%
+    rowid_to_column()
+
+day7_edges <- day7_tidy %>%
+    left_join(day7_nodes, by = c("outside" = "desc")) %>% 
+    rename(to = rowid) %>% 
+    left_join(day7_nodes, by = c("inside" = "desc")) %>% 
+    rename(from = rowid) %>% 
+    filter(!near(weight, 0)) %>% 
+    select(from, to, weight)
+
+day7_graph <- tbl_graph(
+    nodes = day7_nodes, 
+    edges = day7_edges, 
+    directed = TRUE
+)
+
+shiny_gold_id <- day7_nodes %>% filter(desc == "shiny gold") %>% pull(rowid)
+all_simple_paths(
+    day7_graph, 
+    from = shiny_gold_id, 
+    mode = "out"
+) %>% 
+    map(~ .x %>% as.integer() %>% discard(~ .x == shiny_gold_id)) %>% 
     unlist() %>% 
     unique() %>% 
     length() %>% 
@@ -342,15 +359,38 @@ day7_tidy %>%
 
 ## Part 2
 
-Now we need to count the total number of bags that the `shiny gold` must contain. Use some recursion for this. Took me a while to get it right, forgot to add the 1 at the end. 
+Previously I had done this with recursion because I hadn't set up the graph correctly, so my answers were off, which made me give up on the graph thing. I've kept that method below for posterity. Switching to a graph makes it easier and matches the intuition of the problem. 
 
 ```{r day7-part2}
+all_simple_paths(day7_graph, from = shiny_gold_id, mode = "in") %>% 
+    map_dbl(
+        function(x) {
+            x <- unclass(x)
+            tibble(to = x[seq_along(x) - 1], 
+                   from = x[seq(2, length(x))]) %>% 
+                left_join(day7_edges, by = c("to", "from")) %>% 
+                pull(weight) %>% 
+                prod()
+        }
+    ) %>% 
+    sum() %>% 
+    {
+        sprintf(
+            "Part 2 answer: the shiny gold bag must contain %s other bags", 
+            .
+        )
+    }
+```
+
+Now we need to count the total number of bags that the `shiny gold` must contain. Use some recursion for this. Took me a while to get it right, forgot to add the 1 at the end. 
+
+```{r day7-part2-old}
 count_bags <- function(bag_desc) {
     d <- day7_tidy %>% 
         filter(outside == bag_desc)
     
     sum(
-        d$inside_bag_count * 
+        d$weight * 
             (map_dbl(d$inside, count_bags) + 1)
     )
 }
