--- a/README.Rmd
+++ b/README.Rmd
@@ -299,7 +299,7 @@ day6_answers %>%
 
 Now need counts for how many questions were answered yes by _everyone_ in each group. Just replace `union()` with `intersect()`. 
 
-```{r}
+```{r day6-part2}
 day6_answers %>% 
     group_by(group_id) %>% 
     summarise(all_yes = reduce(split_x, intersect), .groups = "drop") %>% 
@@ -427,7 +427,7 @@ parse_boot_code(day8_input) %>%
 
 Now we need to fix the corrupted boot code. In other words: for each of the `jmp` and `nop` commands in the boot code we need to figure out if switching it will cause the programme to terminate because it's gone past the end of the code (rather than because it's looped round to something it already visited). 
 
-```{r}
+```{r day8-part2}
 to_test <- day8_input %>% 
     rowid_to_column() %>% 
     filter(cmd %in% c("jmp", "nop")) %>% 
@@ -507,21 +507,15 @@ sprintf(
 
 ## Part 1
 
-```{r}
-ex <- read_lines("day10_ex.txt") %>% 
-    as.integer() %>% 
-    {
-        c(
-            ., 
-            0L, 
-            max(.) + 3L
-        )
-    }
+This first part is just about counting how many of the jolts have a `diff()` of 1 or 3. Can quickly check the table of all the diffs: 
 
-table(diff(sort(ex)))
+```{r day10-diff-table}
+table(diff(day10_input))
 ```
 
-```{r}
+There are only diffs of 1 and 3, which simplifies things. 
+
+```{r day10-part1}
 day10_input <- read_lines(here::here("data/day10.txt")) %>% 
     as.integer() %>% 
     {
@@ -534,13 +528,7 @@ sprintf("Part 1 answer is %s", prod(table(diff(day10_input))))
 
 ## Part 2
 
-Counting all of the combinations is a non-starter. We can look at the table of diffs from Part 1 though: 
-
-```{r day10-diff-table}
-table(diff(day10_input))
-```
-
-Just 1 and 3. And what is the longest run of 1's in the data?
+Counting all of the combinations is a non-starter. We know from Part 1 though that there are only diffs of 1 and 3 in the data. And what is the longest run of 1's in the data?
 
 ```{r day10-runs}
 runs <- rle(diff(day10_input))
